Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBoolObjObjectField.quorum
class Main
    Boolean v = Test()
    action Main
    end

    action Test() returns Boolean
        Object var
        return var
    end
end